--- a/com.mariomatschgi.unity.ui.asmdef
+++ b/com.mariomatschgi.unity.ui.asmdef
@@ -1,6 +1,7 @@
 {
     "name": "MarioMatschgi.Unity.UI",
     "references": [
+        "GUID:dde48cedb706e483eb2642536b12823a",
         "GUID:2bafac87e7f4b9b418d9448d219b01ab",
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
