--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-	"name": "com.mariomatschgi.unity.uilibrary",
-	"version": "1.0.0",
-	"displayName": "MM UI Library",
-	"description": "Mario Elsnig's UI Library. It's used by some of my other packages and contains ui-related scripts.",
-	"unity": "2019.1",
-	"dependencies": {
-    	"com.mariomatschgi.unity.core": "https://github.com/MarioMatschgi/com.mariomatschgi.unity.core.git",
-		"com.unity.textmeshpro": "2.0.0"
-	},
-	"author": {
-		"name" : "Mario Elsnig",
-		"email" : "mariomatschgi@gmail.com",
-		"url" : "http://www.mcronia.tk/"
-	},
-	"keywords": [
-		"MM",
-		"Mario",
-		"Matschgi",
-		"Elsnig",
-		"Library",
-		"UI",
-		"User",
-		"Interface"
-	]
+  "name": "com.mariomatschgi.unity.uilibrary",
+  "version": "1.0.0",
+  "displayName": "MM UI Library",
+  "description": "Mario Elsnig's UI Library. It's used by some of my other packages and contains ui-related scripts.",
+  "unity": "2019.1",
+  "dependencies": {
+    "com.mariomatschgi.unity.core": "https://github.com/MarioMatschgi/com.mariomatschgi.unity.core.git",
+    "com.unity.textmeshpro": "2.0.0"
+  },
+  "author": {
+    "name": "Mario Elsnig",
+    "email": "mariomatschgi@gmail.com",
+    "url": "http://www.mcronia.tk/"
+  },
+  "keywords": [
+    "MM",
+    "Mario",
+    "Matschgi",
+    "Elsnig",
+    "Library",
+    "UI",
+    "User",
+    "Interface"
+  ],
+  "type": "library"
 }
